--- a/Todo/app/src/main/res/layout/activity_main.xml
+++ b/Todo/app/src/main/res/layout/activity_main.xml
@@ -7,33 +7,34 @@
     tools:context=".MainActivity">
 
     <ListView
+        android:id="@+id/Items"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lvItems"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_above="@+id/btnenterItemname"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/btnAddItem" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" /> // We will type in the item name
 
     <EditText
+        android:id="@+id/etNewItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/etNewItem"
-        android:layout_alignTop="@+id/btnAddItem"
-        android:hint="Enter item"
-        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/btnenterItemname"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/btnAddItem"
-        android:layout_toStartOf="@+id/btnAddItem"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/btnenterItemname"
+        android:layout_toLeftOf="@+id/btnenterItemname"
+        android:hint="Type item name " />
+    // This is for typinh, here we can type anything.
 
     <Button
+        android:id="@+id/btnenterItemname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add"
-        android:id="@+id/btnAddItem"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentBottom="true"
+        android:text="Enter" /> // It will display enter button
 
 </RelativeLayout>
